2000-09-03  Mark Kettenis  <kettenis@gnu.org>

	* gdb_proc_service.h: Add copyright notice.
	Protect against multiple inclusion.
	Add fix for broken prfpregset_t here.
	(struct ps_prochandle): Declare here.
	[HAVE_PROC_SERVICE_H]: Include <proc_service.h>.
	[!HAVE_PROC_SERVICE_H]: Include "gregset.h", define prgregset_t
	and prfpregset_t in terms of gdb_gregset_t and gdb_fpregset_t if
	necessary.
	* lin-thread.c: Unconditionally include "gdb_proc_service.h".
	Remove fix for broken prfpregset_t here.
	(struct ps_prochandle): Don't declare here.

	* MAINTAINERS: Add myself as threads co-maintainer.

2000-09-01  David Anderson  <davea@sgi.com>

	* arch-utils.c arch-utils.h blockframe.c fork-child.c:
	Corrected comment spelling dependant->dependent.
	* corelow.c (default_core_sniffer): Corrected comment 
	spelling.
	* cp-valprint.c (cp_print_value_fields): Corrected 
	comment spelling.
	* d10v-tdep.c dbxread.c: Corrected comment spelling 
	dependan->dependen.
	* defs.h: Corrected spelling, meant 64, not 32, in comment.
	* dst.h eval.c event-loop.c: Corrected comment spelling.
	* event-top.c gdb-events.sh: Corrected comment spelling.
	* gdbarch.c: Corrected comment spelling.
	* gdbarch.h gdbarch.sh: Corrected comment spelling,
	dependant->dependent.
	* gdbtypes.c gdbtypes.h: Corrected comment spelling.
	* infcmd.c infrun.c: Corrected comment spelling.
	* symfile.c symfile.h target.h: Corrected comment spelling,
	dependant->dependent.
	* tracepoint.h: Corrected comment spelling.

2000-09-01  Kevin Buettner  <kevinb@redhat.com>

	* hppa-tdep.c (record_text_segment_lowaddr): Protoize.
	* hppah-nat.c (child_xfer_memory): Protoize.

2000-09-01  Kevin Buettner  <kevinb@redhat.com>

	* symtab.c (decode_line_1):  Make sure leading character is
	actually a colon before skipping over leading colons in global
	namespace specification.

2000-09-01  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* regcache.c (reg_flush_command): New function.  Maintainer-mode